--- a/styles/globals.css
+++ b/styles/globals.css
@@ -91,3 +91,191 @@ html::-webkit-scrollbar {
         transform: translate(0, 0);
     }
 }
+
+/* LOGO ANIMATION */
+.logo-container {
+    width: 80px;
+    height: 180px;
+    margin: 0 auto;
+    position: relative;
+}
+
+.square {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    left: 20px;
+}
+
+.face-top {
+    transform: rotate(-45deg) skew(15deg, 15deg);
+}
+
+.side {
+    transform: rotate(-45deg) skew(15deg, 15deg);
+    transform-origin: bottom left;
+}
+
+.side-2 {
+    transform: rotate(-45deg) skew(15deg, 15deg);
+    transform-origin: top left;
+}
+
+.square-one {
+    background: #64FFDA;
+    z-index: 5;
+    top: 104px;
+    -webkit-animation: ascend-1 1s 0.5s 1 forwards;
+    animation: ascend-1 1s 0.5s 1 forwards;
+}
+
+.square-two {
+    background: #05d0a1;
+    top: 104px;
+    z-index: 4;
+    -webkit-animation: ascend-2 0.8s 0.5s 1 forwards;
+    animation: ascend-2 0.8s 0.5s 1 forwards;
+}
+
+.square-three {
+    background: #05d0a1;
+    top: 104px;
+}
+
+.square-four {
+    background: #64FFDA;
+    top: 104px;
+    left: 44px;
+    -webkit-animation: morph-1 0.6s 0.6s 1 forwards ease-in-out;
+    animation: morph-1 0.6s 0.6s 1 forwards ease-in-out;
+}
+
+.square-five {
+    background: #64FFDA;
+    top: 25px;
+    left: 0px;
+    opacity: 0;
+    -webkit-animation: morph-2 0.6s 1.1s 1 forwards ease-in-out;
+    animation: morph-2 0.6s 1.1s 1 forwards ease-in-out;
+}
+
+@-webkit-keyframes ascend-1 {
+    0% {
+        top: 104px;
+    }
+
+    100% {
+        top: 0px;
+    }
+}
+
+@keyframes ascend-1 {
+    0% {
+        top: 104px;
+    }
+
+    100% {
+        top: 0px;
+    }
+}
+
+@-webkit-keyframes ascend-2 {
+    0% {
+        top: 104px;
+    }
+
+    100% {
+        top: 52px;
+    }
+}
+
+@keyframes ascend-2 {
+    0% {
+        top: 104px;
+    }
+
+    100% {
+        top: 52px;
+    }
+}
+
+@-webkit-keyframes morph-1 {
+    0% {
+        transform: rotate(-45deg) skew(15deg, 15deg);
+    }
+
+    100% {
+        transform: rotate(-45deg) skew(-45deg, 15deg);
+        height: 37px;
+        top: 118px;
+    }
+}
+
+@keyframes morph-1 {
+    0% {
+        transform: rotate(-45deg) skew(15deg, 15deg);
+    }
+
+    100% {
+        transform: rotate(-45deg) skew(-45deg, 15deg);
+        height: 37px;
+        top: 118px;
+    }
+}
+
+@-webkit-keyframes morph-2 {
+    0% {
+        transform: rotate(-45deg) skew(15deg, 15deg);
+        opacity: 0;
+    }
+
+    98% {
+        opacity: 1;
+    }
+
+    100% {
+        top: 26px;
+        left: 1px;
+        transform: rotate(-15deg) skew(-15deg, -15deg);
+        opacity: 1;
+    }
+}
+
+@keyframes morph-2 {
+    0% {
+        transform: rotate(-45deg) skew(15deg, 15deg);
+        opacity: 0;
+    }
+
+    98% {
+        opacity: 1;
+    }
+
+    100% {
+        top: 26px;
+        left: 1px;
+        transform: rotate(-15deg) skew(-15deg, -15deg);
+        opacity: 1;
+    }
+}
+
+/* laptop css */
+
+.laptop{
+    width: 100%;
+    max-width: 1200px;
+    position: relative;
+}
+
+.laptop img {
+    width: 100%;
+}
+
+.laptop iframe {
+    position: absolute;
+    width: 67.7%;
+    height: 81.3%;
+    background: #000;
+    top: 7.1%;
+    left: 17.5%;
+}
