--- a/styles/globals.css
+++ b/styles/globals.css
@@ -47,10 +47,12 @@ html::-webkit-scrollbar {
 }
 
 .section-heading::before{
-    content:"<"
+    content:"<";
+    color: #64FFDA;
 }
 .section-heading::after{
-    content:"/>"
+    content:"/>";
+    color: #64FFDA;
 }
 
 .skills-list li::before{
@@ -66,6 +68,9 @@ html::-webkit-scrollbar {
 }
 .nav-item{
     color:#8892B0;
+}
+.nav-item::first-letter{
+    color: #64FFDA;
 }
 .active{
     color:#64FFDA;
